force-app/main/default/objects/Quotation__c/fields/X2_Yr_Advance_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>X2_Yr_Advance_Maintenance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>2 Yr Advance Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>