force-app/main/default/objects/Quotation__c/validationRules/Negative_discount_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_discount_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
OR(Discount_1_PSF__c &lt; 0 ,Discount_1_L__c &lt; 0,
Premium_Charges_Amount_1__c &lt; 0,
Discount_2_PSF__c &lt; 0,Discount_2_L__c &lt; 0,
Discount_9_PSF__c &lt;0, Discount_9_L__c &lt;0,
Discount_10_PSF__c &lt;0, Discount_10_L__c &lt;0,
Discount_11_PSF__c &lt;0,Discount_11_L__c &lt;0,
No_of_parking__c &lt;0,Single_car_park_Additional__c &lt; 0,
Tandem_car_park_Additional__c&lt;0,Single_Open_Additional__c &lt; 0,
Tandem_Open_Additional__c &lt;0 ,Stack_Additional__c &lt; 0,
MLCP_Additional__c &lt; 0,Basement_Additional__c &lt; 0,
Podium__c &lt; 0, Single_Covered_Additional_Amount__c &lt; 0,
Tandem_Covered_Additional_Amount__c &lt; 0,Single_Open_Additional_Amount__c&lt;0,
Tandem_Open_Additional_Amount__c &lt; 0,Stilt_Additional_Amount__c &lt;0,
MLCP_Additional_Amount__c &lt; 0 , Basement_Additional_Amount__c &lt; 0,
Podium_Amount__c &lt; 0
))</errorConditionFormula>
    <errorMessage>Negative values are not allowed please contact the Sales Strategy.</errorMessage>
</ValidationRule>