force-app/main/default/objects/Quotation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Current_Approval_Status__c</columns>
    <columns>Level_One_Approver__c</columns>
    <columns>Level_Two_Approver__c</columns>
    <columns>Level_Three_Approver__c</columns>
    <columns>Booking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>