force-app/main/default/objects/Quotation__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project__c</columns>
    <columns>Booking__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tandem_Open_Additional__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>